--- a/src/css/components/ReservationForm.css
+++ b/src/css/components/ReservationForm.css
@@ -24,10 +24,10 @@
 
 .reservation-form__input {
   width: 100%;
-  padding: 0.5em 1em;
-  margin-bottom: 0.5em;
+  padding: 0.5rem 1rem;
+  margin-bottom: 0.5rem;
   border: 1px solid var(--color-input-border);
-  font-size: 1.15em;
+  font-size: 1.15rem;
   background-color: var(--color-input-background);
 }
 
@@ -41,24 +41,24 @@
 
 .reservation-form__submit-text {
   color: var(--color-white);
-  font-size: 1.2em;
+  font-size: 1.2rem;
 }
 
 @media only screen and (min-width: 400px) {
   .reservation-form__submit-btn {
-    padding: 1em 1.2em;
-    margin-top: 2em;
+    padding: 1rem 1.2rem;
+    margin-top: 2rem;
   }
 
   .reservation-form__submit-text {
-    font-size: 1.15em;
+    font-size: 1.15rem;
   }
 }
 @media only screen and (min-width: 768px) {
   .reservation-form {
     width: 100%;
     max-width: 534px;
-    padding: 1.5em;
+    padding: 1.5rem;
   }
 
   .reservation-form__triangle {
