--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,11 +1,11 @@
 @import 'reset';
 @import 'components';
 @import 'placeholders';
-@import 'Home';
-@import 'NavBar';
-@import 'Top';
-@import 'TalkingCar';
-@import 'ReservationForm';
-@import 'Mission';
-@import 'Footer';
-@import 'AboutUs';
+@import 'pages/Home';
+@import 'pages/AboutUs';
+@import 'components/NavBar';
+@import 'components/Top';
+@import 'components/TalkingCar';
+@import 'components/ReservationForm';
+@import 'components/Mission';
+@import 'components/Footer';
