--- a/src/css/components/NavBar.css
+++ b/src/css/components/NavBar.css
@@ -53,7 +53,7 @@
   display: none;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
-  grid-gap: 5em;
+  grid-gap: 5rem;
   max-width: 1280px;
   padding-top: 18px;
   padding-bottom: 18px;
