Replaced all font-size px values with rem.

--- a/src/css/components/NavBar.css
+++ b/src/css/components/NavBar.css
@@ -15,8 +15,17 @@
   --font-26: 26px;
   --font-32: 32px;
   --font-44: 44px;
+  --font-1-6: 1.6rem;
+  --font-2-2: 2.2rem;
+  --font-2-6: 2.6rem;
+  --font-3-2: 3.2rem;
+  --font-4-4: 4.4rem;
   --line-120: 120%;
   --line-150: 150%;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 .mb-16 {
@@ -87,7 +96,7 @@
 }
 
 .call-btn__text {
-  font-size: var(--font-22);
+  font-size: var(--font-2-2);
   font-weight: bold;
   color: var(--color-white);
   margin-left: 10px;
@@ -100,7 +109,7 @@
 }
 
 .navbar-links__navbar-link {
-  font-size: var(--font-16);
+  font-size: var(--font-1-6);
   color: var(--color-button);
   text-decoration: underline;
   padding-right: 16px;
@@ -123,7 +132,7 @@
 }
 @media only screen and (min-width: 1280px) {
   .navbar-links__navbar-link {
-    font-size: var(--font-22);
+    font-size: var(--font-2-2);
     padding-right: 40px;
   }
 }
