--- a/src/css/components/Footer.css
+++ b/src/css/components/Footer.css
@@ -15,8 +15,17 @@
   --font-26: 26px;
   --font-32: 32px;
   --font-44: 44px;
+  --font-1-6: 1.6rem;
+  --font-2-2: 2.2rem;
+  --font-2-6: 2.6rem;
+  --font-3-2: 3.2rem;
+  --font-4-4: 4.4rem;
   --line-120: 120%;
   --line-150: 150%;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 .mb-16 {
