--- a/src/css/components/ReservationForm.scss
+++ b/src/css/components/ReservationForm.scss
@@ -26,10 +26,10 @@
 
 .reservation-form__input {
     width: 100%;
-    padding: .5rem 1rem;
-    margin-bottom: .5rem;
+    padding: 1.6rem 2rem;
+    margin-bottom: 1rem;
     border: 1px solid var(--color-input-border);
-    font-size: 1.15rem;
+    font-size: var(--font-1-6);
     background-color: var(--color-input-background);
 }
 
@@ -43,7 +43,7 @@
 
 .reservation-form__submit-text {
     color: var(--color-white);
-    font-size: 1.2rem;
+    font-size: var(--font-1-6);
 }
 
 @media only screen and (min-width: 400px) {
@@ -53,7 +53,8 @@
     }
 
     .reservation-form__submit-text {
-        font-size: 1.15rem;
+        font-size: var(--font-2);
+        white-space: nowrap;
     }
 }
 
@@ -61,7 +62,7 @@
     .reservation-form {
         width: 100%;
         max-width: 534px;
-        padding: 1.5rem;
+        padding: 2.5rem;
     }
 
     .reservation-form__triangle {
