--- a/src/css/placeholders.scss
+++ b/src/css/placeholders.scss
@@ -19,6 +19,7 @@
     --font-32: 32px;
     --font-44: 44px;
     --font-1-6: 1.6rem;
+    --font-2: 2rem;
     --font-2-2: 2.2rem;
     --font-2-6: 2.6rem;
     --font-3-2: 3.2rem;
