Make NavBar, AboutUs and Home scss files closer to mockup; add img-fluid--no-width(img-fluid didn't work).

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -8,6 +8,11 @@ body, p {
   height: auto;
 }
 
+.img-fluid--no-width {
+  height: auto;
+  max-height: -webkit-fill-available;
+}
+
 .pointer {
   cursor: pointer;
 }
