--- a/src/css/components.scss
+++ b/src/css/components.scss
@@ -6,6 +6,13 @@ body, p {
 .img-fluid {
     width: 100%;
     height: auto;
+    // max-height: -webkit-fill-available;
+}
+
+.img-fluid--no-width {
+    // width: 100%;
+    height: auto;
+    max-height: -webkit-fill-available;
 }
 
 .pointer {
