--- a/src/css/components/NavBar.css
+++ b/src/css/components/NavBar.css
@@ -61,12 +61,12 @@ html {
 
 .navbar-desktop {
   display: none;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1.2fr;
   grid-template-rows: 1fr;
-  grid-gap: 5rem;
+  grid-gap: 10rem;
   max-width: 1280px;
-  padding-top: 18px;
-  padding-bottom: 18px;
+  padding-top: 1.6rem;
+  padding-bottom: 1.6rem;
 }
 
 .navbar-desktop__navbar-desktop-left {
@@ -76,7 +76,7 @@ html {
 }
 
 .navbar-desktop__logo-container {
-  height: 45px;
+  height: 3rem;
 }
 
 .call-btn {
@@ -92,12 +92,12 @@ html {
   display: none;
 }
 
-.call-btn__phone-img {
-  height: 24px;
+.call-btn__phone-img-container {
+  height: 1.6rem;
 }
 
 .call-btn__text {
-  font-size: var(--font-2-2);
+  font-size: var(--font-1-6);
   font-weight: bold;
   color: var(--color-white);
   margin-left: 10px;
@@ -133,7 +133,6 @@ html {
 }
 @media only screen and (min-width: 1280px) {
   .navbar-links__navbar-link {
-    font-size: var(--font-2-2);
     padding-right: 40px;
   }
 }
