--- a/src/css/main.css
+++ b/src/css/main.css
@@ -169,6 +169,11 @@ body, p {
   height: auto;
 }
 
+.img-fluid--no-width {
+  height: auto;
+  max-height: -webkit-fill-available;
+}
+
 .pointer {
   cursor: pointer;
 }
@@ -286,8 +291,8 @@ html {
   .home-content__welcome-container {
     width: 67%;
     max-width: 1280px;
-    padding-top: 200px;
-    padding-bottom: 80px;
+    padding-top: 11rem;
+    padding-bottom: 8rem;
   }
 
   .welcome-container__general-info {
@@ -347,7 +352,7 @@ html {
 @media only screen and (min-width: 1024px) {
   .about-us__description-container {
     max-width: 1280px;
-    padding-top: 200px;
+    padding-top: 20rem;
     padding-bottom: 80px;
   }
 
@@ -438,12 +443,12 @@ html {
 
 .navbar-desktop {
   display: none;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1.2fr;
   grid-template-rows: 1fr;
-  grid-gap: 5rem;
+  grid-gap: 10rem;
   max-width: 1280px;
-  padding-top: 18px;
-  padding-bottom: 18px;
+  padding-top: 1.6rem;
+  padding-bottom: 1.6rem;
 }
 
 .navbar-desktop__navbar-desktop-left {
@@ -453,7 +458,7 @@ html {
 }
 
 .navbar-desktop__logo-container {
-  height: 45px;
+  height: 3rem;
 }
 
 .call-btn {
@@ -469,12 +474,12 @@ html {
   display: none;
 }
 
-.call-btn__phone-img {
-  height: 24px;
+.call-btn__phone-img-container {
+  height: 1.6rem;
 }
 
 .call-btn__text {
-  font-size: var(--font-2-2);
+  font-size: var(--font-1-6);
   font-weight: bold;
   color: var(--color-white);
   margin-left: 10px;
@@ -510,7 +515,6 @@ html {
 }
 @media only screen and (min-width: 1280px) {
   .navbar-links__navbar-link {
-    font-size: var(--font-2-2);
     padding-right: 40px;
   }
 }
