--- a/src/css/pages/AboutUs.css
+++ b/src/css/pages/AboutUs.css
@@ -38,7 +38,7 @@
 @media only screen and (min-width: 1024px) {
   .about-us__description-container {
     max-width: 1280px;
-    padding-top: 200px;
+    padding-top: 20rem;
     padding-bottom: 80px;
   }
 
