--- a/src/css/pages/AboutUs.scss
+++ b/src/css/pages/AboutUs.scss
@@ -41,7 +41,7 @@
     .about-us__description-container {
         // width: 85%;
         max-width: 1280px;
-        padding-top: 200px;
+        padding-top: 20rem;
         padding-bottom: 80px;
     }
 
