Change font-size for Footer.

--- a/src/css/components/Footer.scss
+++ b/src/css/components/Footer.scss
@@ -11,6 +11,7 @@
     background-color: var(--color-footer);
     padding: 16px;
     color: var(--color-white);
+    font-size: 1.3rem;
 }
 
 .footer__content {
