--- a/src/css/placeholders.scss
+++ b/src/css/placeholders.scss
@@ -7,9 +7,10 @@
     --color-red: #DF2C21;
     --color-blue: #80B9CD;
     --color-light-blue: #E3F2F8;
-    --color-white: #FFFFFF;
     --color-green: #4DDC40;
     --color-footer: #232121;
+    --color-white: #FFFFFF;
+    --color-black: #000000;
     --color-input-border: #D1D1D1;
     --color-input-background: #F6F6F6;
     // Font sizes
@@ -18,7 +19,10 @@
     --font-26: 26px;
     --font-32: 32px;
     --font-44: 44px;
+    --font-1: 1rem;
+    --font-1-3: 1-3rem;
     --font-1-6: 1.6rem;
+    --font-1-8: 1.8rem;
     --font-2: 2rem;
     --font-2-2: 2.2rem;
     --font-2-6: 2.6rem;
