Make Mission container closer to actual mockup.

--- a/src/css/components/Mission.css
+++ b/src/css/components/Mission.css
@@ -22,7 +22,7 @@
 }
 
 .mission-content__text {
-  font-size: var(--font-22);
+  font-size: var(--font-1-8);
   line-height: var(--line-150);
 }
 
@@ -42,7 +42,7 @@
   .mission-container__mission-content {
     width: 50%;
     padding: 0;
-    padding-left: 30px;
+    margin-left: 3rem;
   }
 }
 
