--- a/src/css/components/Mission.scss
+++ b/src/css/components/Mission.scss
@@ -23,7 +23,7 @@
 }
 
 .mission-content__text {
-    font-size: var(--font-22);
+    font-size: var(--font-1-8);
     line-height: var(--line-150);
 }
 
@@ -43,6 +43,7 @@
     .mission-container__mission-content {
         width: 50%;
         padding: 0;
-        padding-left: 30px;
+        margin-left: 3rem;
+        // margin-left: 2rem 0 2rem 3rem;
     }
 }
