--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,6 +3,7 @@
 @import 'placeholders';
 @import 'pages/Home';
 @import 'pages/AboutUs';
+@import 'pages/ContactUs';
 @import 'components/NavBar';
 @import 'components/Top';
 @import 'components/TalkingCar';
